# formula_engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build_linux.sh
cmake/: fel.cmake
examples/: CMakeLists.txt
examples/1. simple/: CMakeLists.txt  simple.cpp
examples/2. postgres/: CMakeLists.txt  postgres.cpp
examples/3. backtest/: CMakeLists.txt  backtest.cpp
fel/: CMakeLists.txt  containers.cpp  containers.hpp  crosssections.cpp  crosssections.hpp  fel.hpp  nodes.cpp  nodes.hpp  settings.cpp  settings.hpp  types.cpp  types.hpp
fel/data/: pgstore.cpp  pgstore.hpp
fel/operators/: crosssections.cpp  crosssections.hpp  nodes.cpp  nodes.hpp
fel/time/: businessdayconvention.cpp  businessdayconvention.hpp  calendar.cpp  calendar.hpp  data.cpp  date.cpp  date.hpp  dateparser.cpp  dateparser.hpp  frequency.cpp  frequency.hpp  period.cpp  period.hpp  timeunit.hpp  weekday.cpp  weekday.hpp
fel/time/calendars/: china.cpp  china.hpp
fel/utilities/: containers.cpp  containers.hpp  errors.cpp  errors.hpp
lib/libpqxx/linux/: libpqxx.la
lib/libpqxx/windows/: libpqxx.exp  libpqxx.lib  libpqxxD.lib
lib/libpqxx/windows/lib/: libpqxxD.exp
pyformula/: __init__.py  nodes.py  settings.py
python/pyformula/: nodes.py
src/: CMakeLists.txt  containers.hpp  nodes.cpp  nodes.hpp  settings.cpp  settings.hpp
tests/: CMakeLists.txt  containers.cpp  crossections.cpp  nodes.cpp  settings.cpp  types.cpp
tests/operators/: crossections.cpp  nodes.cpp
tests/time/: date.cpp
tests/time/calendars/: china.cpp
tests/utilities/: containers.cpp
